<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_burst_capture">Take burst</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_stopped">Capture stopped</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_time_during_video_recording">Time spent recording</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_imax_too_much_tilt_down">Move up slightly</string>
    <string name="accessibility_imax_too_much_tilt_left">Move right slightly</string>
    <string name="accessibility_imax_too_much_tilt_right">Move left slightly</string>
    <string name="accessibility_imax_too_much_tilt_up">Move down slightly</string>
    <string name="accessibility_mode_last_filmstrip_item">Scroll to last item</string>
    <string name="accessibility_mode_next_filmstrip_item">Scroll to next item</string>
    <string name="accessibility_output_time_during_video_recording">Length of time lapse video</string>
    <string name="accessibility_photobooth_shutter_start">Start Photobooth Mode</string>
    <string name="accessibility_photobooth_shutter_stop">Stop Photobooth Mode</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_tooltip_no_timelapse_recorded">Record at actual speed, no time lapse</string>
    <string name="accessibility_tooltip_speed_up_ratio_hint_minutes_to_seconds">Record %1$dtimes faster than actual speed of action. %2$d minutes of recording creates a %3$d seconds video</string>
    <string name="accessibility_tooltip_speed_up_ratio_hint_seconds_to_seconds">Record %1$dtimes faster than actual speed of action. %2$d seconds of recording creates a %3$d seconds video</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="action_share_chooser_title">Share with</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_desc">Autofocus</string>
    <string name="af_option_tooltip">Focus options</string>
    <string name="all_photos">ALL PHOTOS</string>
    <string name="animation">Animation</string>
    <string name="aperture">Aperture</string>
    <string name="app_name">Camera</string>
    <string name="auto">Auto</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="btn_last_filmstrip_item">Last</string>
    <string name="btn_next_filmstrip_item">Next</string>
    <string name="burst_date_content_description">Stack of %1$s burst photos taken on %2$s</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_editor_best_frame_description">Best burst frame</string>
    <string name="burst_editor_frame_description">Burst frame %1$s</string>
    <string name="burst_editor_navigate_up">Navigate up</string>
    <string name="burst_editor_section_header_all">All Photos</string>
    <string name="burst_editor_section_header_best">Best Photos</string>
    <string name="burst_name">Smartburst</string>
    <string name="burst_process_creation">Saving</string>
    <string name="burst_process_done">All items processed</string>
    <string name="burst_text">Smartburst</string>
    <string name="camera_error_title">Camera error</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_menu_settings_label">@string/mode_settings</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="capture_error">Capture error</string>
    <string name="center">Center</string>
    <string name="cheetah_description">Record action that takes a long time – say, a sunset – in a video that plays back in a shorter time</string>
    <string name="cheetah_name">Time Lapse</string>
    <string name="cling_text_for_refocus_editor_button">To refocus, tap here</string>
    <string name="close">Close</string>
    <string name="collage">Collage</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="delete_button_description">Delete</string>
    <string name="double_tap_zoom">Zoom</string>
    <string name="edit_button_description">Edit</string>
    <string name="mode_video">Video</string>
    <string name="photo">Photo</string>
    <string name="pref_camera_dirty_lens_summary">Display warning when the lens may be too dirty to take high-quality pictures. Wiping off the lens may help.</string>
    <string name="pref_camera_dirty_lens_title">Show dirty lens warning</string>
    <string name="pref_camera_double_tap_action_title">Double-tap action</string>
    <string name="pref_camera_gestures_title">Gestures</string>
    <string name="pref_camera_picturesize_default">large</string>
    <string name="pref_camera_save_location_title">Save location</string>
    <string name="pref_camera_sounds_title">Camera sounds</string>
    <string name="pref_camera_volume_key_action_title">Volume key action</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_developer_settings">Developer Settings</string>
    <string name="pref_hdr_plus_control_summary">Show manual control for HDR+. When this setting is off, HDR+ stays on all the time.</string>
    <string name="pref_hdr_plus_control_title">HDR+ control</string>
    <string name="pref_hevc_control_summary">Use H.265/HEVC format instead of H.264/AVC for a smaller file size. HEVC may not be supported on some platforms.</string>
    <string name="pref_raw_output_control_summary">Show manual control for RAW+JPEG. The RAW (DNG) file is saved separately, along with identifiable camera data, in a device folder in Google Photos. Uses additional storage.</string>
    <string name="pref_raw_output_control_title">RAW+JPEG control</string>
    <string name="pref_video_hevc">Store videos efficiently</string>
    <string name="pref_video_quality_large">large</string>
    <string name="pref_video_stabilization">Video stabilization</string>
    <string name="setting_back_camera_photo">Back camera photo resolution</string>
    <string name="setting_back_camera_video">Back camera video resolution</string>
    <string name="setting_front_camera_photo">Front camera photo resolution</string>
    <string name="setting_front_camera_video">Front camera video resolution</string>
    <string name="setting_general">General</string>
    <string name="setting_google_feedback">Send feedback</string>
    <string name="setting_google_help">Help</string>
    <string name="setting_google_help_and_feedback">Help &amp; feedback</string>
    <string name="setting_grid_mode">Grid type</string>
    <string name="share_button_description">Share</string>
    <string name="volume_key_shutter">Shutter</string>
    <string name="zoom_collapse_desc">Show zoom controls</string>
    <string name="zoom_minus_desc">Zoom out</string>
    <string name="zoom_plus_desc">Zoom in</string>
    <string name="reboot_summary">(reboot required)</string>
    <string name="google_photos_title">Enable Google Photo</string>
    <string name="pref_reinit_title">ReINIT Camera Session</string>
    <string name="pref_af_data_hide_title">Remove AF data from the screen</string>
    <string name="pref_qjpg_title">Final JPG quality HDR+</string>
    <string name="pref_qjpg_default">0</string>
    <string name="pref_sat_title">Saturation</string>
    <string name="sat_b_title">Rear camera</string>
    <string name="sat_f_title">Front camera</string>
    <string name="sat_default">10</string>
    <string name="quality_title">Quality HDR+ Enhanced</string>
    <string name="quality_default">0</string>
    <string name="quality_ns_title">Quality Night Sight</string>
    <string name="awb_title">Default AWB</string>
    <string name="awb_default">0</string>
    <string name="pref_darkmode_title">Dark Theme</string>
    <string name="pref_maxbright_title">Max screen brightness</string>
    <string name="pref_denoise_title">Amplify denoise</string>
    <string name="pref_category_library">Image Processing</string>
    <string name="pref_category_library_summary">Also known as Ram Patcher, modifies library parameters in order to enhance the final photo</string>
</resources>