<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:orderingFromXml="true" android:key="prefscreen_top"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:layout="@layout/preference_category_first_layout" android:title="@string/setting_general" android:key="pref_category_general">
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_room_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_save_location_title" android:key="pref_camera_recordlocation_key" android:order="0" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_volume_up_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_sounds_title" android:key="pref_camera_sounds_key" android:order="1" android:defaultValue="true" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_google_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_darkmode_title" android:key="pref_darkmode_key" android:order="2" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_view_burst" android:layout="@layout/preference_with_margin" android:title="@string/pref_maxbright_title" android:key="pref_maxbright_key" android:order="3" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_developer_mode_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_reinit_title" android:key="pref_reinit_key" android:order="12" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_ic_sync_grey600_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_af_data_hide_title" android:key="pref_af_data_hide_key" android:order="13" android:defaultValue="false" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24a" android:layout="@layout/preference_with_margin" android:title="@string/google_photos_title" android:key="google_photos_key" android:summary="@string/reboot_summary" android:order="14" android:defaultValue="false" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_touch_app_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_gestures_title" android:key="pref_category_gestures" android:order="4">
            <ListPreference android:entries="@array/pref_volume_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_volume_key_action_title" android:key="pref_volume_key_action" android:summary="%s" android:defaultValue="@string/volume_key_shutter" android:entryValues="@array/pref_volume_action_entryvalues" />
            <ListPreference android:entries="@array/pref_double_tap_action_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_double_tap_action_title" android:key="pref_double_tap_key" android:summary="%s" android:defaultValue="@string/double_tap_zoom" android:entryValues="@array/pref_double_tap_entryvalues" />
        </PreferenceScreen>
        <ListPreference android:icon="@drawable/quantum_gm_ic_grid_on_gm_grey_24" android:entries="@array/pref_grid_mode_entries" android:layout="@layout/preference_with_margin" android:title="@string/setting_grid_mode" android:key="pref_camera_grid_lines_mode" android:summary="%s" android:order="5" android:defaultValue="0" android:entryValues="@array/pref_grid_mode_entryvalues" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_category_advanced" android:key="pref_category_advanced" android:order="255">
            <PreferenceCategory android:title="@string/setting_general" android:key="pref_category_general">
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_dirty_lens_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_camera_dirty_lens_title" android:key="pref_dirty_lens_detector_key" android:summary="@string/pref_camera_dirty_lens_summary" android:defaultValue="true" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_hdr_plus_control_title" android:key="pref_camera_hdrplus_option_available_key" android:summary="@string/pref_hdr_plus_control_summary" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_raw_on_gm2_grey_24px" android:layout="@layout/preference_with_action_button" android:title="@string/pref_raw_output_control_title" android:key="pref_camera_raw_output_option_available_key" android:summary="@string/pref_raw_output_control_summary" android:defaultValue="false" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/ic_hevc_gm2_24px" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_hevc" android:key="pref_video_hevc_setting_key" android:summary="@string/pref_hevc_control_summary" android:defaultValue="false" />
            </PreferenceCategory>
            <PreferenceCategory android:title="@string/photo" android:key="pref_category_photo">
                <ListPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24" android:entries="@array/quality_entries" android:layout="@layout/preference_with_margin" android:title="@string/quality_title" android:key="quality_key" android:summary="%s" android:defaultValue="@string/quality_default" android:entryValues="@array/quality_entryvalues" />
                <ListPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24_ns" android:entries="@array/quality_ns_entries" android:layout="@layout/preference_with_margin" android:title="@string/quality_ns_title" android:key="quality_ns_key" android:summary="%s" android:defaultValue="@string/quality_default" android:entryValues="@array/quality_ns_entryvalues" />
                <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_category_library" android:key="pref_category_library" android:summary="@string/pref_category_library_summary">
                    <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:layout="@layout/preference_with_margin" android:title="Oem Noise Model" android:key="lib_noisemodel_key" android:defaultValue="false" />
                    <ListPreference android:entries="@array/pref_lib_libpatcher_entries" android:layout="@layout/preference_with_margin" android:title="Sharpness" android:key="lib_sharpness_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_libpatcher_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_libpatcher_entries" android:layout="@layout/preference_with_margin" android:title="Chroma Denoise" android:key="lib_chroma_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_libpatcher_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_libpatcher_entries" android:layout="@layout/preference_with_margin" android:title="Luma Denoise" android:key="lib_NR_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_libpatcher_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_dehaze_entries" android:layout="@layout/preference_with_margin" android:title="Dehaze" android:key="lib_dehaze_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_dehaze_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_coef_gamma_entries" android:layout="@layout/preference_with_margin" android:title="Coefficient Gamma" android:key="lib_coffgamma_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_coef_gamma_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_contrast1_entries" android:layout="@layout/preference_with_margin" android:title="Contrast 1" android:key="lib_contrast1_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_contrast1_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_contrast2_entries" android:layout="@layout/preference_with_margin" android:title="Contrast 2" android:key="lib_contrast2_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_contrast2_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_denoises_entries" android:layout="@layout/preference_with_margin" android:title="Smoothing 1" android:key="lib_smoothing1_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_denoises_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_denoises_entries" android:layout="@layout/preference_with_margin" android:title="Smoothing 2" android:key="lib_smoothing2_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_denoises_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_black_point_entries" android:layout="@layout/preference_with_margin" android:title="Black Point" android:key="lib_blackpoint_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_black_point_entryvalues" />
                    <ListPreference android:entries="@array/pref_lib_news_entries" android:layout="@layout/preference_with_margin" android:title="Exposure Time Boost" android:key="lib_exposureboost_key" android:summary="%s" android:defaultValue="OFF" android:entryValues="@array/pref_lib_news_entryvalues" />
                </PreferenceScreen>
                <ListPreference android:icon="@drawable/quantum_gm_ic_expand_more_gm_grey_24" android:entries="@array/pref_qjpg_entries" android:layout="@layout/preference_with_margin" android:title="@string/pref_qjpg_title" android:key="pref_qjpg_key" android:summary="%s" android:defaultValue="@string/pref_qjpg_default" android:entryValues="@array/pref_qjpg_entryvalues" />
                <ListPreference android:icon="@drawable/quantum_gm_ic_hdr_plus_gm_grey_24_awb" android:entries="@array/awb_entries" android:layout="@layout/preference_with_margin" android:title="@string/awb_title" android:key="awb_key" android:summary="%s" android:defaultValue="@string/awb_default" android:entryValues="@array/awb_entryvalues" />
                <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_expand_more_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_denoise_title" android:key="pref_denoise_key" android:defaultValue="false" />
                <PreferenceScreen android:icon="@drawable/quantum_gm_ic_more_horiz_vd_theme_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_sat_title" android:key="pref_sat">
                    <ListPreference android:entries="@array/sat_entries" android:layout="@layout/preference_with_margin" android:title="@string/sat_b_title" android:key="sat_b_key" android:summary="%s" android:defaultValue="@string/sat_default" android:entryValues="@array/sat_entryvalues" />
                    <ListPreference android:entries="@array/sat_entries" android:layout="@layout/preference_with_margin" android:title="@string/sat_f_title" android:key="sat_f_key" android:summary="%s" android:defaultValue="@string/sat_default" android:entryValues="@array/sat_entryvalues" />
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/photo" android:key="pref_category_resolution_camera">
        <ListPreference android:icon="@drawable/quantum_gm_ic_photo_camera_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_photo" android:key="pref_camera_picturesize_back_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
        <ListPreference android:icon="@drawable/quantum_gm_ic_photo_camera_front_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_photo" android:key="pref_camera_picturesize_front_key" android:summary="%s" android:defaultValue="@string/pref_camera_picturesize_default" android:entryValues="@array/pref_camera_picturesize_entryvalues" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/mode_video" android:key="pref_category_resolution_video">
        <ListPreference android:icon="@drawable/quantum_gm_ic_video_camera_back_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_back_camera_video" android:key="pref_video_quality_back_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <ListPreference android:icon="@drawable/tmp_ic_video_camera_front_gm_grey" android:layout="@layout/preference_with_margin" android:title="@string/setting_front_camera_video" android:key="pref_video_quality_front_key" android:summary="%s" android:defaultValue="@string/pref_video_quality_large" android:entryValues="@array/pref_video_quality_entryvalues" />
        <com.google.android.apps.camera.legacy.app.settings.ManagedSwitchPreference android:icon="@drawable/quantum_gm_ic_video_stable_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_video_stabilization" android:key="pref_video_stabilization_key" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_google_help_and_feedback" android:key="pref_category_help_and_feedback">
        <Preference android:icon="@drawable/quantum_gm_ic_feedback_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_feedback" android:key="pref_launch_feedback" />
        <Preference android:icon="@drawable/quantum_gm_ic_help_outline_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/setting_google_help" android:key="pref_launch_help" />
        <PreferenceScreen android:icon="@drawable/quantum_gm_ic_developer_mode_gm_grey_24" android:layout="@layout/preference_with_margin" android:title="@string/pref_developer_settings" android:key="pref_category_developer" />
    </PreferenceCategory>
</PreferenceScreen>