<?xml version="1.0" encoding="utf-8"?>
<merge android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="end" android:orientation="horizontal" android:id="@id/zoom_ui_full" android:layout_width="fill_parent" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/zoom_ui_internal" android:paddingTop="@dimen/zoom_slider_padding_top" android:paddingBottom="@dimen/zoom_slider_padding_bottom" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageButton android:id="@id/zoom_minus_button" android:background="@android:color/transparent" android:layout_width="@dimen/zoom_button_size" android:layout_height="@dimen/zoom_button_size" android:src="@drawable/ic_zoom_out" android:scaleType="center" android:contentDescription="@string/zoom_minus_desc" />
            <com.google.android.apps.camera.zoomui.ZoomSeekBar android:id="@id/zoom_marker_progress" android:clickable="true" android:layout_width="0.0dip" android:layout_height="0.0dip" android:progressDrawable="@android:color/transparent" android:thumb="@drawable/zoom_slider_thumb" android:layout_weight="1.0" android:paddingStart="@dimen/zoom_seekbar_padding" android:paddingEnd="@dimen/zoom_seekbar_padding" />
            <ImageButton android:id="@id/zoom_plus_button" android:background="@android:color/transparent" android:layout_width="@dimen/zoom_button_size" android:layout_height="@dimen/zoom_button_size" android:src="@drawable/ic_zoom_in" android:scaleType="center" android:contentDescription="@string/zoom_plus_desc" />
        </LinearLayout>
        <ImageButton android:layout_gravity="end|bottom|center" android:id="@id/zoom_collapse_button" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/zoom_button_size" android:layout_height="@dimen/zoom_button_size" android:src="@drawable/ic_slider_collapsed" android:scaleType="center" android:contentDescription="@string/zoom_collapse_desc" />
    </LinearLayout>
</merge>